# MGL

./: .gitignore  CMakeLists.txt
MGL/include/: pixel_utils.h
MGL/src/: error.c  program.c
test_mgl/: CMakeLists.txt  main.cpp
